fixed cta section button height with alignment

--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,7 @@ div.cta-card {
     display: flex;
     border-radius: 7px;
     justify-content: space-evenly;
+    align-items: center;
     padding: 5vh;
 }
 
